<resources>

    <string name="ipAddress">http://192.168.146.86/condoapp/</string>
    <!-- Main Activity Parcel. -->
    <string name="app_name">iCondo</string>
    <string name="parcelBtn1">Insert Parcel Detail</string>
    <string name="parcelBtn2">Edit Parcel Detail</string>
    <string name="parcelBtn3">View Parcel</string>
    <string name="nav_open">Drawer Open</string>
    <string name="nav_close">Drawer Closed</string>

    <!-- Activity Insert Parcel. -->
    <string name="insPTextInsert">Insert Parcel Information</string>
    <string name="insPText2Direction">Please fill up the information below</string>
    <string name="insCollectorName">Enter Recipient Name</string>
    <string name="insParcelUnit">Enter Unit Number</string>
    <string name="insExpressBrand">Enter Express Brand (Courier) </string>
    <string name="insTrackingNumber">Enter Tracking Number</string>
    <string name="insDeliveredDate">Enter Delivered Date</string>
    <string name="insCollectStatus">Enter Collect Status</string>
    <string name="insCollectedDate">Enter Collected Date</string>
    <string name="add">Add</string>
    <string name="addAnother">Add another parcel</string>
    <string name="view">View Parcel</string>
    <string name="managementID">Enter your ID</string>

    <!-- Activity Update Parcel. -->
    <string name="insPTextEdit">Update Parcel Information</string>
    <string name="editCollectorName">Enter Recipient Name</string>
    <string name="editParcelUnit">Enter Unit Number</string>
    <string name="editExpressBrand">Enter Express Brand (Courier) </string>
    <string name="editTrackingNumber">Enter Tracking Number</string>
    <string name="editDeliveredDate">Enter Delivered Date</string>
    <string name="editCollectStatus">Enter Collect Status</string>
    <string name="editCollectedDate">Enter Collected Date</string>
    <string name="editManagementID">Enter Management ID</string>
    <string name="editParcelID">Parcel ID</string>

    <!-- Activity View/Report Parcel. -->
    <string name="insReport">Parcel Information</string>
    <string name="searchBar">Search</string>

    <!-- Layout parcel_item.xml -->
    <string name="txt">Tracking Number</string>
    <string name="collectorName">CollectorName</string>

    <!-- String array courier type -->
    <string-array name="courier">
        <item>Courier Type</item>
        <item>Ninja Van</item>
        <item>J&amp;T Express</item>
        <item>DHL Ecommerce</item>
        <item>Shopee Express</item>
        <item>Pos Malaysia</item>
        <item>Citylink Express</item>
        <item>Lazada</item>
        <item>GD Express</item>
        <item>Skynet Express</item>
        <item>Other</item>
    </string-array>

    <!-- String array collect status -->
    <string-array name="collectStatus">
        <item>Collect Status</item>
        <item>Available</item>
        <item>Collected</item>
    </string-array>

    <string name="title_activity_parcel_main_navi">ParcelMainNavi</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="str2">
        <item>9am-11am</item>
        <item>11am-1pm</item>
        <item>1pm-3pm</item>
        <item>3pm-5pm</item>
        <item>5pm-7pm</item>
        <item>7pm-9pm</item>
        <item>9pm-11pm</item>
    </string-array>

    <string-array name="str3">
        <item>Cleaning, Sanitizing and Disinfect</item>
        <item>Construction</item>
        <item>Renovation Work</item>
        <item>Pest Control</item>
    </string-array>

    <string-array name="vehicletype">
        <item>None</item>
        <item>CAR</item>
        <item>MOTORCYCLE</item>
    </string-array>
    <string name="title_activity_main_frag">MainActivityFrag</string>

</resources>