<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".EditParcelDetails">


    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back_button"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/editParcelInfo"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:text="@string/insPTextEdit"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUpParcelID"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/editParcelID"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editParcelInfo" />

    <EditText
        android:id="@+id/edtUpManagementID"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/editManagementID"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUpParcelID" />

    <EditText
        android:id="@+id/edtUpTrackingNumber"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/editTrackingNumber"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUpUnitNumber" />

    <EditText
        android:id="@+id/edtUpCollectedStatus"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/editCollectStatus"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUpDeliveredDate" />

    <EditText
        android:id="@+id/edtUpUnitNumber"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/editParcelUnit"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUpCollectorName" />

    <EditText
        android:id="@+id/edtUpExpressBrand"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/editExpressBrand"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUpTrackingNumber" />

    <EditText
        android:id="@+id/edtUpCollectedDate"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/editCollectedDate"
        android:inputType="date"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUpCollectedStatus" />

    <EditText
        android:id="@+id/edtUpDeliveredDate"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/editDeliveredDate"
        android:inputType="date"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUpExpressBrand" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_btn"
        android:text="Update"
        android:textColor="#FDFCFC"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUpCollectedDate" />

    <EditText
        android:id="@+id/edtUpCollectorName"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/editCollectorName"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUpManagementID" />


</androidx.constraintlayout.widget.ConstraintLayout>