<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".ParcelDetails">

    <TextView
        android:id="@+id/insParcelPage"
        android:layout_width="320dp"
        android:layout_height="25dp"
        android:layout_marginTop="60dp"
        android:text="@string/insPTextInsert"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#050505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/insParcelPage2"
        android:layout_width="320dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/insPText2Direction"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="#050505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insParcelPage" />

    <EditText
        android:id="@+id/edtCollectorName"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/insCollectorName"
        android:textSize="16sp"
        android:padding="10dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMangID" />

    <EditText
        android:id="@+id/edtUnitNumber"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/insParcelUnit"
        android:textSize="16sp"
        android:padding="10dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCollectorName" />

    <EditText
        android:id="@+id/edtExpressBrand"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/insExpressBrand"
        android:textSize="16sp"
        android:padding="10dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUnitNumber" />

    <EditText
        android:id="@+id/edtTrackingNumber"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/insTrackingNumber"
        android:textSize="16sp"
        android:padding="10dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtExpressBrand" />

    <EditText
        android:id="@+id/edtDeliveredDate"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/insDeliveredDate"
        android:textSize="16sp"
        android:padding="10dp"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTrackingNumber" />
<!--
    <EditText
        android:id="@+id/edtCollectStatus"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/insCollectStatus"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDeliveredDate" />
-->
    <!--
    <EditText
        android:id="@+id/edtCollectedDate"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/insCollectedDate"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCollectStatus" />
-->

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:text="@string/add"
        android:background="@drawable/black_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDeliveredDate"
        app:layout_constraintVertical_bias="0.854" />

    <EditText
        android:id="@+id/edtMangID"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/white_column"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/managementID"
        android:textSize="16sp"
        android:padding="10dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insParcelPage2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/building"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>